fixing/ gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,19 +17,20 @@ body {
   width: 1110px;
   height: 572px;
   display: grid;
-  margin: 0 auto;
+  margin: 152px auto;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  background-color: #ffffff;
+  background-color: #ecf2f8;
+  gap: 20px;
 }
 
 .purpleDiv {
+  position: relative;
   width: 540px;
   height: 282px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   padding: 20px;
   height: 100%;
   background: rgb(115, 63, 200);
@@ -50,6 +51,12 @@ body {
   gap: 10px;
   color: #ffffff70;
 }
+.dec {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 90px;
+}
 .purpleDiv span {
   color: #cfcfcf;
 }
@@ -66,7 +73,10 @@ body {
 .name p {
   font-size: 11px;
 }
-
+.purpleDiv h2 {
+  position: relative;
+  z-index: 2;
+}
 h2 {
   margin-bottom: 24px;
   font-size: 20px;
@@ -78,7 +88,6 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   padding: 20px;
   width: 255px;
   height: 282px;
@@ -86,12 +95,20 @@ h2 {
   grid-area: 1 / 3 / 2 / 4;
   border-radius: 8px;
 }
+.grayDiv .name {
+  width: 91px;
+  height: 28px;
+}
+.grayDiv .pix {
+  margin-left: 45px;
+}
+
 .grayDiv p {
   font-size: 13px;
 }
 .grayDiv .profile {
   display: flex;
-  margin-right: 70px;
+  margin-right: 125px;
   margin-bottom: 18px;
   color: #ffffff70;
   gap: 10px;
@@ -104,15 +121,18 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   width: 266px;
-  height: 540px;
+  height: 572px;
   background-color: #ffffff;
   grid-area: 1 / 4 / 3 / 5;
   border-radius: 8px;
 }
+.bigWhiteDiv .pix {
+  margin-left: 32px;
+}
 .bigWhiteDiv .profile {
   display: flex;
+  margin-top: 20px;
   gap: 10px;
   margin-bottom: 18px;
   color: #48556a;
@@ -123,6 +143,15 @@ h2 {
 }
 .bigWhiteDiv h2 {
   color: #48556a;
+  margin: 0 auto;
+  width: 191px;
+  margin-bottom: 24px;
+}
+
+.bigWhiteDiv span p {
+  margin: 0 auto;
+  width: 191px;
+  font-size: 13px;
 }
 .bigWhiteDiv span {
   color: #48556a;
@@ -131,7 +160,6 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   padding: 20px;
   width: 255px;
   height: 266px;
@@ -158,18 +186,27 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   width: 540px;
   height: 266px;
   background-color: #19202d;
   grid-area: 2 / 2 / 3 / 4;
   border-radius: 8px;
 }
+.blackDiv p {
+  margin-top: 24px;
+  font-size: 13px;
+  margin: 0 auto;
+  width: 500px;
+}
 .blackDiv .profile {
   display: flex;
-  margin: 20px 0 18px;
+  margin: 20px 0 18px 15px;
   gap: 10px;
   color: #ffffff70;
+}
+.blackDiv h2 {
+  margin: 0 auto;
+  width: 500px;
 }
 .blackDiv span {
   color: #ffffff70;
@@ -177,19 +214,36 @@ h2 {
 
 @media (max-width: 375px) {
   .mainContainer {
+    position: relative;
     width: 375px;
-    height: 1966px;
+    height: 1900px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(8, 1fr);
     margin: 0 auto;
+    gap: 25px;
   }
 }
 
 @media (max-width: 327px) {
   .purpleDiv {
+    z-index: 1;
+    position: absolute;
     width: 327px;
     height: 444px;
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 1 / 3 / 2;
+  }
+  @media (max-width: 372px) {
+    .profile {
+      width: 131px;
+      height: 28px;
+    }
+  }
+  @media (max-width: 372px) {
+    .dec {
+      z-index: 2;
+      top: 0px;
+      right: 40px;
+    }
   }
 }
 @media (max-width: 327px) {
@@ -210,23 +264,46 @@ h2 {
 
 @media (max-width: 327px) {
   .grayDiv {
+    margin-top: 125px;
     width: 327px;
-    height: 240px;
-    grid-area: 2 / 1 / 3 / 2;
+    height: 255px;
+    grid-area: 3 / 1 / 4 / 2;
   }
 }
+@media (max-width: 327px) {
+  .grayDiv .profile {
+    width: 185px;
+    height: 20px;
+    margin-top: 24px;
+    margin-right: 165px;
+  }
+}
+@media (max-width: 327px) {
+  .grayDiv h2 {
+    width: 263px;
+    height: 48px;
+  }
+}
+
 @media (max-width: 327px) {
   .grayDiv span {
     font-size: 13px;
     width: 263px;
     height: 72px;
+    margin-bottom: 25px;
   }
 }
 @media (max-width: 327px) {
   .whiteDiv {
     width: 327px;
     height: 222px;
-    grid-area: 3 / 1 / 4 / 2;
+    grid-area: 4 / 1 / 5 / 2;
+  }
+}
+@media (max-width: 327px) {
+  .whiteDiv .profile {
+    width: 140px;
+    height: 28px;
   }
 }
 @media (max-width: 327px) {
@@ -239,26 +316,57 @@ h2 {
   .blackDiv {
     width: 327px;
     height: 384px;
-    grid-area: 4 / 1 / 6 / 2;
+    grid-area: 5 / 1 / 7 / 2;
   }
 }
 @media (max-width: 327px) {
-  .blackDiv span {
+  .blackDiv .profile {
+    margin-left: 32px;
+  }
+}
+@media (max-width: 327px) {
+  .blackDiv h2 {
     width: 263px;
-    height: 144px;
+    height: 120px;
+  }
+}
+@media (max-width: 327px) {
+  .blackDiv span p {
+    margin-top: 16px;
+    height: 120px;
+    width: 263px;
     font-size: 13px;
   }
 }
+
 @media (max-width: 327px) {
   .bigWhiteDiv {
     width: 327px;
-    height: 438px;
-    grid-area: 6 / 1 / 8 / 2;
+    height: 500px;
+    grid-area: 7 / 1 / 9 / 2;
   }
 }
+@media (max-width: 327px) {
+  .bigWhiteDiv .profile {
+    margin-left: 35px;
+  }
+}
+@media (max-width: 327px) {
+  .bigWhiteDiv h2 {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 327px) {
+  .bigWhiteDiv .name p {
+    width: 120px;
+    height: 28px;
+  }
+}
+
 @media (max-width: 327px) {
   .bigWhiteDiv span {
     width: 263px;
     height: 270px;
+    margin-bottom: 32px;
   }
 }
